carousel wrap solve

--- a/src/scss/tv-guide/_category-row.scss
+++ b/src/scss/tv-guide/_category-row.scss
@@ -87,8 +87,9 @@
 
 	&__item {
 		display: block;
+		margin: 0 5px;
 		// margin-right: 10px;
-		padding-left: 10px;
+		// padding-left: 10px;
 				
 		@each $cat in $cat-list {
 			@include catColor($cat);
